--- a/phase1.html
+++ b/phase1.html
@@ -25,19 +25,19 @@
 
         <div class="content-section">
             <h2>Table of Contents</h2>
-            <div class="image-placeholder" style="height: 350px; line-height: 350px;">
-                <img src="./image/phase1/table_of_contents.png" alt="Table of Contents" />
+            <div class="image-placeholder">
+                <img src="./image/phase1/table_of_contents.jpg" alt="Table of Contents" />
             </div>
         </div>
 
         <div class="content-section">
             <h2>Appendix</h2>
-            <div class="image-placeholder" style="height: 400px; line-height: 400px;">
-                <img src="./image/phase1/appendix_a.png" alt="Appendix A" />
+            <div class="image-placeholder">
+                <img src="./image/phase1/appendix_a.jpg" alt="Appendix A" />
             </div>
 
-            <div class="image-placeholder" style="height: 400px; line-height: 400px;">
-                <img src="./image/phase1/appendix_b.png" alt="Appendix B" />
+            <div class="image-placeholder">
+                <img src="./image/phase1/appendix_b.jpg" alt="Appendix B" />
             </div>
         </div>
     </div>
