--- a/phase3.html
+++ b/phase3.html
@@ -28,13 +28,12 @@
 
         <div class="content-section">
             <h2>Folder Structure</h2>
-            <div class="image-placeholder" style="height: 300px; line-height: 300px;">
+            <div class="image-placeholder">
                 <img src="./image/phase3/folder_structure.jpg" alt="Folder Structure" />
             </div>
         </div>
 
         <div class="content-section">
-            <h2>References</h2>
             <div style="text-align: center; margin: 20px 0;">
                 <a href="https://docs.google.com/document/d/1RBNfLeHKhFD1_Jcp5GcPeFRsbiiu-rZHUwSX0LQokTI/edit?usp=sharing" target="_blank" class="nav-button" style="background-color: #0779e4; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold;">
                     REFERENCE LIST LINK
